**0.6.1 (2020-06-xx)**

* Bugfix to respect encoding using the contextopen function in
  readtext, d1e26a.

**0.6.0 (2020-06-10)**

* The project rewritten completely.

* Python 3 and 2 supported.

* History prior to this release might be erased.

**0.4.0 (2017-08-19)**

* Allow open file objects to be supplied to the ``txtpack`` function,
  not only the file name as a string.

* Some pep8 work done in the core python files.

**0.3.2 (2016-10-29)**

* Bugfix in pullxl.py. An update in xlrd version 1.0.0 on empty cell values made
  this bug evident. Empty cells was reported as empty bytestrings before, now it
  is reported as empty unicode strings as documented. The channelpack bug
  resulted in all values in a "channel" being unicode strings when some should
  be numpy.nan and the rest numbers.

**0.3.1 (2015-05-10)**

* Added a records method to ChannelPack.

**0.3.0 (2015-04-06)**

* The persistent condition strings are written whith python syntax operating on
  numpy arrays. Identifiers use replacement syntax like ``%(<id>)``.

* Removed method ``ch`` from the ChannelPack, superfluous.

* Added ``counter`` method to the ChannelPack.

* Added ``parts`` method to the ChannelPack.

* Change name on method set_samplerate, was set_sample_rate.

* A number of bugfixes.

* Two xldate conversion functions in pullxl.

**0.2.2 (2014-11-04)**

* Important bugfix in pulldbf module. Was forcing types on numpy, biggest float
  was 'f4'. In case of excel kind of dates for example, this is not enough, and
  numbers were lost. The result was repeating equal numbers that should not be
  equal.

* Since forcing types on numpy was deprecated, an issue with missing values in a
  dbf file (nulls) was easy to fix. Now, null values are replaced with numpy
  nan, was (0). Also very important.

**0.2.1 (2014-10-20)**

* xlrd added to install_requires list in setup.py

* Docstring fix in slicelist method. Was wrong.

**0.2.0 (2014-10-19)**
